                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 13-03-2006 fixed: dvdplayer ff/rw didn't resume properly after the pause fix.
 - 12-03-2006 fixed: file names with ',' inside archives.
 - 12-03-2006 fixed: dvdplayer would sometimes stall in the middle of a movie
 - 12-03-2006 fixed: navigation (highlight) would apear to have laggy on menu's with multiple sequential overlays. (ex. original matrix ntsc dvd )
 - 12-03-2006 fixed: dvdplayer would drop loads of frames when resuming from pause.
 - 12-03-2006 fixed: Incorrect strings shown at start of Delete from Media windows.
 - 11-03-2006 changed: Edit Title for Video Database items now also changes the title in the xml file that holds the movie details.
			This means the Movie Info window will now display the updated title as well.
 - 11-03-2006 fixed: [ 1435914 ] "Set lock" bug
 - 11-03-2006 added: Debug logging to xbmsp file opening.
 - 11-03-2006 fixed: [ 1394481 ] DVD Player - LCD Output.
 - 11-03-2006 fixed: Infinite loop if a media window is activated with a path that does not exist.
 - 11-03-2006 fixed: Text positioning could be up to 1 pixel out.
 - 11-03-2006 fixed: <origin>'s weren't being scaled for different resolutions.
 - 11-03-2006 added: GetThumb button to Movie information dialog to redownload the thumb (overwrites any existing)
 - 10-03-2006 changed: decoupled video playback from master clock in dvdplayer to allow for nicer transition when timestamps in dvd wrap back
 - 10-03-2006 fixed: CUE sheet path name resolving (and other path name resolving) was broken on remote shares.
 - 10-03-2006 changed: music nav, restored track naming template for songs sorted by track num