@@ -27,3 +27,6 @@ framedrop=1
 
 #added by pike, Winamp & MPEG needed for SHOUTcast compability, please leave intact (no spaces allowed)
 user-agent=XBMC-mplayer/1.1.0(MPEG)
+
+#lowres decoding for any source with a width larger than 1280 pixels, only applies to when ffmpeg is used for decoding
+lavdopts=lowres=1,1280
