@@ -11,3 +11,12 @@
 
 // 0x200000 is the audio starting range
 
+// special options that can be passed to a codec
+class CDVDCodecOption
+{
+public:
+  CDVDCodecOption(std::string name, std::string value) { m_name = name; m_value = value; }
+  std::string m_name;
+  std::string m_value;
+};
+typedef std::vector<CDVDCodecOption> CDVDCodecOptions;
