@@ -7,7 +7,8 @@ class CDVDAudioCodec;
 
 class CDemuxStreamVideo;
 class CDVDStreamInfo;
-
+class CDVDCodecOption;
+typedef std::vector<CDVDCodecOption> CDVDCodecOptions;
 
 class CDVDFactoryCodec
 {
@@ -16,5 +17,5 @@ public:
   static CDVDAudioCodec* CreateAudioCodec(CDVDStreamInfo &hint );
 
   static CDVDAudioCodec* OpenCodec(CDVDAudioCodec* pCodec,  CDVDStreamInfo &hint );
-  static CDVDVideoCodec* OpenCodec(CDVDVideoCodec* pCodec,  CDVDStreamInfo &hint );
+  static CDVDVideoCodec* OpenCodec(CDVDVideoCodec* pCodec,  CDVDStreamInfo &hint, CDVDCodecOptions &options );
 };
