@@ -10,7 +10,7 @@ class CDVDVideoCodecFFmpeg : public CDVDVideoCodec
 public:
   CDVDVideoCodecFFmpeg();
   virtual ~CDVDVideoCodecFFmpeg();
-  virtual bool Open(CodecID codecID, int iWidth, int iHeight, void* ExtraData, unsigned int ExtraSize);
+  virtual bool Open(CDVDStreamInfo &hints, CDVDCodecOptions &options);  
   virtual void Dispose();
   virtual int Decode(BYTE* pData, int iSize);
   virtual void Reset();
