@@ -114,7 +114,7 @@ void CDVDVideoCodecLibMpeg2::ReleaseBuffer(DVDVideoPicture* pPic)
   }
 }
 
-bool CDVDVideoCodecLibMpeg2::Open(CodecID codecID, int iWidth, int iHeight, void* ExtraData, unsigned int ExtraSize)
+bool CDVDVideoCodecLibMpeg2::Open(CDVDStreamInfo &hints, CDVDCodecOptions &options)
 {
   if (!m_dll.Load())
     return false;
