@@ -9,7 +9,7 @@ class CDVDVideoCodecLibMpeg2 : public CDVDVideoCodec
 public:
   CDVDVideoCodecLibMpeg2();
   virtual ~CDVDVideoCodecLibMpeg2();
-  virtual bool Open(CodecID codecID, int iWidth, int iHeight, void* ExtraData, unsigned int ExtraSize);
+  virtual bool Open(CDVDStreamInfo &hints, CDVDCodecOptions &options);
   virtual void Dispose();
   virtual int Decode(BYTE* pData, int iSize);
   virtual void Reset();
